# pyHTN

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml
py_htn/: conditions.py  conversions.py  domain.py  exceptions.py  fact.py  planner.py  utils.py  validation.py
py_htn/common/imports/: typing.py
py_htn/conditions/: conditions.py  fact.py  pattern_matching.py
py_htn/domain/: __init__.py  axiom.py  method.py  network_element.py  operators.py  task.py
py_htn/planner/: __init__.py  plan_action.py  plan_node.py  planner.py  trace.py
pyhtn/: utils.py
pyhtn/common/: utils.py
pyhtn/common/imports/: typing.py
pyhtn/conditions/: conditions.py  fact.py  pattern_matching.py
pyhtn/conditions/learners/: basic_pattern_matcher.py  condition_learner_interface.py
pyhtn/domain/: axiom.py  method.py  network_element.py  operators.py  task.py  variable.py
pyhtn/htn/: __init__.py  element_executions.py  execution_traces.py  htn_elements.py  planner2.py  test.py  unord_test.py
pyhtn/planner/: planner.py  planner_logger.py  trace.py
tests/: test_run.py
tests/blocks_world/: blocks_world.py  blocks_world_env.py
tests/robot_domain/: robot_env_pytests.py  robot_env_test.py
tests/unit_tests/interactivity/: test_get_next_decomposition_and_apply.py
