[metadata]
name = pyhtn
author = Glen Smith
version = 2.0
summary = A Python implementation of an HTN planner.
description-file = 
    README.md

[files]
packages = 
    pyhtn

[options]
install_requires =
    requests>=2.32.3,
    pyyaml>=6.0.2,
    tabulate>=0.9.0,
    anthropic>=0.38.0,
    websockets==15.0.1,
    asyncio==3.4.3,
    py_plan @ git+https://github.com/cmaclell/py_plan.git
python_requires = 
    >=3.10

